[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/MobIA/Blower.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/blower/walk2.png" type="Texture" id=3]
[ext_resource path="res://src/utility/Hitbox.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/blower/walk1.png" type="Texture" id=5]
[ext_resource path="res://src/utility/TriggerAttack.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/blower/attack2.png" type="Texture" id=7]
[ext_resource path="res://scenes/prefabs/prop/Blow.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/corps/BlowerCorpse.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/sprites/blower/BlowerIcon.png" type="Texture" id=10]

[sub_resource type="RayShape2D" id=1]
length = 400.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.97, 19.8218 )

[sub_resource type="CircleShape2D" id=3]
radius = 45.0666

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41.5052, 21.9084 )

[sub_resource type="Animation" id=5]
resource_name = "scale_down"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=6]
resource_name = "scale_up"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[node name="Blower" instance=ExtResource( 1 )]
position = Vector2( 0, 1 )
script = ExtResource( 2 )
CORPSE = ExtResource( 9 )
max_hp = 3
speed = 5000
icon = ExtResource( 10 )
blow = ExtResource( 8 )

[node name="TriggerAttack" type="Area2D" parent="." index="0"]
position = Vector2( -133.083, -40.7276 )
rotation = 1.5708
collision_layer = 2
collision_mask = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Raycast" type="CollisionShape2D" parent="TriggerAttack" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -0.500618, -14.814 )
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="." index="2" groups=["Character", "Hitbox", "Mob"]]
collision_layer = 2
collision_mask = 63
script = ExtResource( 4 )

[node name="Body" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 7.32663, -47.6139 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyChecker" index="0"]
position = Vector2( -0.642181, -14.8835 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/scale_down = SubResource( 5 )
anims/scale_up = SubResource( 6 )

[node name="AnimatedSprite" parent="." index="5"]
position = Vector2( 24.7882, -68.5299 )
scale = Vector2( 0.34, 0.34 )
frames = SubResource( 7 )
animation = "attack"
playing = true

[node name="InvincibilityTimer" parent="." index="7"]
wait_time = 1.0

[node name="Shadow" parent="." index="8"]
scale = Vector2( 0.25, 0.25 )

[connection signal="area_entered" from="TriggerAttack" to="TriggerAttack" method="_on_TriggerAttack_body_entered"]
[connection signal="body_entered" from="TriggerAttack" to="TriggerAttack" method="_on_TriggerAttack_body_entered"]
[connection signal="enemy_spotted" from="TriggerAttack" to="." method="_on_TriggerAttack"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
